--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,32 @@ html {
 
 .header {
   text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.footer {
+  color: #F0F0F0;
+  font-family: 'Lucida Console', monospace;
+  font-size: 9pt;
+  margin: auto;
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  bottom: 22px;
+  left: 0px;
+}
+
+.footer a {
+  color: #FFFFFE;
+  font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 12pt;
+}
+
+.footer a img {
+  vertical-align: middle;
 }
 
 .queue {
@@ -47,6 +73,8 @@ html {
 .commands {
   padding-left: 16px;
   margin-top: 16px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .commandsTable {
   margin: auto auto;
