added output register and command

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,10 @@ html {
   margin: auto auto;
 }
 
+.statusLabels {
+  font-weight: bold;
+}
+
 .commands {
   padding-left: 16px;
   margin-top: 16px;
